[package]
name = "hoardbase"
version = "0.1.0"
edition = "2021"
default-run = "core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.26.1", features = ["blob","chrono", "serde_json", "time", "url", "functions", "backup", "trace", "bundled"] }
serde_json = "1.0.72"
bson = { version = "2.0.1", features = ["chrono-0_4"] }
slugify = "0.1.0"
sha-1 = "0.10.0"
hex = "0.4.3"
cursive = "0.16.3"
clap = "2.34.0"
cursive_tree_view = "0.7"
cursive_table_view = "0.13.3"
chrono = "0.4.19"
fallible-streaming-iterator = "0.1.9"

[[bin]]
name = "hoardmin"
path = "src/hoardmin.rs"

[[bin]]
name = "core"
path = "src/main.rs"