[package]
name = "hoardbase"
version = "0.1.0-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Hoardbase is a single-file embedded database based on sqlite with an API identical to that of mongodb."
repository = "https://github.com/shi-yan/hoardbase"
# default-run = "hoardbase"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.26.1", features = ["blob","chrono", "serde_json", "time", "url", "functions", "backup", "trace", "bundled"] }
serde_json = "1.0.72"
bson = { version = "2.0.1", features = ["chrono-0_4"] }
slugify = "0.1.0"
sha-1 = "0.10.0"
hex = "0.4.3"
chrono = "0.4.19"

[lib]
path = "src/lib.rs"