[package]
name = "hoardbase"
version = "0.1.0"
description = "A single-file embedded NoSql based on sqlite with mongodb like interface."
authors = ["Shi Yan"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hoardbase = { path = "../" }
bson = { version = "2.0.1", features = ["chrono-0_4"] }

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "event-queue-api", "try-catch-api"]
